--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.2"
+    "@formkit/auto-animate": "^0.8.2",
+    "chart.js": "^4.4.2",
+    "svelte-chartjs": "^3.1.5"
   }
 }
